freest/test/prog/Invalid/SessionTypes/PartiallyAppliedSelect/PartiallyAppliedSelect.fst
module PartiallyAppliedSelect where

main : Skip
main = select Nil
